<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_appearance">
        <ListPreference
            android:defaultValue="system"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:key="theme"
            android:title="@string/pref_theme_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_editor">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="line_numbers"
            android:title="@string/pref_line_numbers" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="word_wrap"
            android:title="@string/pref_word_wrap" />

        <ListPreference
            android:defaultValue="auto"
            android:entries="@array/line_break_entries"
            android:entryValues="@array/line_break_values"
            android:key="line_break"
            android:title="@string/pref_line_break"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="full_screen"
            android:title="@string/pref_full_screen" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="syntax_highlight"
            android:title="@string/pref_syntax" />

        <ListPreference
            android:defaultValue="14"
            android:entries="@array/font_size_entries"
            android:entryValues="@array/font_size_values"
            android:key="font_size"
            android:title="@string/pref_font_size"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="auto_save"
            android:title="@string/pref_auto_save" />
    </PreferenceCategory>
</PreferenceScreen>
