<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="16dp">

    <EditText
        android:id="@+id/find_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/find_hint"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:singleLine="true" />

    <EditText
        android:id="@+id/replace_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/replace_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:singleLine="true" />

    <CheckBox
        android:id="@+id/case_sensitive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/case_sensitive" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp">

        <Button
            android:id="@+id/btn_next"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/find_next" />

        <Button
            android:id="@+id/btn_replace"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/replace_one" />

        <Button
            android:id="@+id/btn_replace_all"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/replace_all" />
    </LinearLayout>
</LinearLayout>
